// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App characterization (recorded message sequences) > asks a follow-up question and answers with the first suggestion 1`] = `
"=== mounted ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
· Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== prompt echo ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
∘ Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== request started ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
◦ Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== followup ask ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ Which language?                                                                                  │
│ ❯ 1. Polish                                                                                      │
│   2. English                                                                                     │
│   3. Type my own answer…                                                                         │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯

=== pressed enter ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
❯ Polish
· Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== answer ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
❯ Polish

● Cześć!
∘ Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test"
`;

exports[`App characterization (recorded message sequences) > asks to approve a tool, and approves it with y 1`] = `
"=== mounted ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
· Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== prompt echo ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
∘ Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== request started ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
◦ Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== intro ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi

● Let me read the file.
˙ Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== tool ask ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi

● Let me read the file.
╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ Read                                                                                             │
│ src/a.ts                                                                                         │
│ Do you want to proceed?                                                                          │
│ ❯ 1. Yes                                                                                         │
│   2. No                                                                                          │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯

=== pressed y ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi

● Let me read the file.
· Tumble… (esc to interrupt · total 1s · step 1s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== next request ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi

● Let me read the file.
∘ Tumble… (esc to interrupt · total 1s · step 1s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== answer ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi

● Let me read the file.

● The file exports one function.
◦ Tumble… (esc to interrupt · total 1s · step 1s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test"
`;

exports[`App characterization (recorded message sequences) > completes the task 1`] = `
"=== mounted ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
· Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== prompt echo ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
∘ Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== request started ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
◦ Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== answer ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi

● All done here.
˙ Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== completion say ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi

● All done here.

● Finished the job.
. Tumble… (esc to interrupt · total 1s · step 1s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== completion ask ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi

● All done here.

● Finished the job.

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== task completed ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi

● All done here.

● Finished the job.

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test"
`;

exports[`App characterization (recorded message sequences) > prints an auto-approved tool as a tool row in allow mode 1`] = `
"=== mounted ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code (YOLO)

❯ Say hi
· Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== prompt echo ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code (YOLO)

❯ Say hi
∘ Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== request started ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code (YOLO)

❯ Say hi
◦ Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== tool ask (auto-approved) ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code (YOLO)

❯ Say hi
● Read(src/a.ts)
˙ Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== answer ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code (YOLO)

❯ Say hi
● Read(src/a.ts)

● Read it.
. Tumble… (esc to interrupt · total 1s · step 1s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test"
`;

exports[`App characterization (recorded message sequences) > runs a command and collects its output into one row 1`] = `
"=== mounted ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
· Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== prompt echo ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
∘ Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== request started ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
◦ Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== command ask ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ Bash command                                                                                     │
│ $ ls -1                                                                                          │
│ Do you want to proceed?                                                                          │
│ ❯ 1. Yes                                                                                         │
│   2. No                                                                                          │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯

=== pressed y ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
· Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== output chunk ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
● Bash(ls -1)
    ⎿  … +1 line (ctrl+o)
∘ Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== output keep-running ask ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
● Bash(ls -1)
    ⎿  … +1 line (ctrl+o)
◦ Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== output complete (new ts) ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
● Bash(ls -1)
    ⎿  … +3 lines (ctrl+o)
˙ Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== next request ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
● Bash(ls -1)
    ⎿  … +3 lines (ctrl+o)
. Tumble… (esc to interrupt · total 1s · step 1s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== answer ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
● Bash(ls -1)
    ⎿  … +3 lines (ctrl+o)

● Three files.
○ Tumble… (esc to interrupt · total 1s · step 1s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test"
`;

exports[`App characterization (recorded message sequences) > shows a failed API request as a retry dialog, then a host error 1`] = `
"=== mounted ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
· Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== prompt echo ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
∘ Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== request started ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
◦ Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== api_req_failed ask ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ API request failed                                                                               │
│ 401 Unauthorized: invalid x-api-key                                                              │
│ Retry the request?                                                                               │
│ ❯ 1. Yes                                                                                         │
│   2. No                                                                                          │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯

=== pressed y (retry) ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
· Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== host error ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code


 Error: Provider went away
 Press Ctrl+C to exit
"
`;

exports[`App characterization (recorded message sequences) > shows reasoning, then the answer 1`] = `
"=== mounted ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
· Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== prompt echo ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
∘ Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== request started ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
◦ Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== reasoning partial ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
  ∴ Thinking…
˙ Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== reasoning final ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
  ∴ Thinking…
. Tumble… (esc to interrupt · total 1s · step 1s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== answer partial ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
  ∴ Thinking…

● Hi
○ Tumble… (esc to interrupt · total 1s · step 1s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== answer final ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
  ∴ Thinking…

● Hi there!
◦ Tumble… (esc to interrupt · total 1s · step 1s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test"
`;

exports[`App characterization (recorded message sequences) > streams a plain answer 1`] = `
"=== mounted ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
· Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== prompt echo ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
∘ Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== request started ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi
◦ Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== answer partial 1 ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi

● Hello
˙ Tumble… (esc to interrupt · total 0s · step 0s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== answer partial 2 ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi

● Hello, wor
. Tumble… (esc to interrupt · total 1s · step 1s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== answer partial 3 (two lines) ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi

● Hello, world!
  Second line is
○ Tumble… (esc to interrupt · total 1s · step 1s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test

=== answer final ===
✻ Welcome to Tumble Code v0.0.0-test
  cwd: <workspace>
  anthropic · claude-test · mode: code

❯ Say hi

● Hello, world!
  Second line is here.
◦ Tumble… (esc to interrupt · total 1s · step 1s)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯
────────────────────────────────────────────────────────────────────────────────────────────────────
? for shortcuts                                                                   code · claude-test"
`;
